Fixed weird iframe issue that was cropping up

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -12,6 +12,11 @@ body {
   font-size: 16px;
 }
 
+body iframe
+{
+  display: none;
+}
+
 .padded
 {
   padding: 15px;
